src/kits/interface/ListView.cpp
@@ -207,8 +207,23 @@ BListView::Draw(BRect updateRect)
 		BListItem* item = ItemAt(i);
 		itemFrame.bottom = itemFrame.top + ceilf(item->Height()) - 1;
 
-		if (itemFrame.Intersects(updateRect))
+		rgb_color textColor = ui_color(B_LIST_ITEM_TEXT_COLOR);
+		rgb_color disabledColor;
+		if (textColor.red + textColor.green + textColor.blue > 128 * 3)
+			disabledColor = tint_color(textColor, B_DARKEN_2_TINT);
+		else
+			disabledColor = tint_color(textColor, B_LIGHTEN_2_TINT);
+
+		if (itemFrame.Intersects(updateRect)) {
+			if (!item->IsEnabled())
+				SetHighColor(disabledColor);
+			else if (item->IsSelected())
+				SetHighColor(ui_color(B_LIST_SELECTED_ITEM_TEXT_COLOR));
+			else
+				SetHighColor(ui_color(B_LIST_ITEM_TEXT_COLOR));
+
 			DrawItem(item, itemFrame);
+		}
 
 		itemFrame.top = itemFrame.bottom + 1;
 	}
